--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               <div id="header"> 
                   <div class="container">
               
-                 <div class="logo"><a href="index.html"><img src="images/logo.png" alt="">AEG<em>Insurance Ltd</em></a></div>	 
+                 <div class="logo"><a href="index.html"><img src="images/logo.png" alt="">AEG<em> Insurance Ltd.</em></a></div>	 
                 <nav>
                   <a class="toggleMenu" href="#">Menu</a>
                   <ul class="nav">
@@ -126,7 +126,7 @@
                       </div>
                       
                         <div class="pelplediv1">
-                        <a href="#" class="man1"><img src="images/???" alt=""></a>
+                        <a href="#" class="man1"><img src="images/2222.jpg" alt=""></a>
                        <label>Kaustubh Mishra</label>
                        <!-- <span>	UX designer</span> -->
                        <br>
