--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                       </div>
                       
                         <div class="pelplediv1">
-                       <a href="#" class="man1"><img src="images/????" alt=""></a>
+                       <a href="#" class="man1"><img src="images/3333.jpg" alt=""></a>
                        <label>Hary Ahuja</label>
                        <!-- <span>	Developer</span> -->
                        <br>
